--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@ html, body {
     height: 100%;
     min-height: 100%;
     width: 100%;
+    display: flex;
+    flex: none;
 }
 
 body {
@@ -33,6 +35,7 @@ header {
     grid-template-columns: 1fr 4fr;
     background-color: rgb(68, 68, 68);
     padding-top: 10px;
+    padding-left: 20px;
     padding-bottom: 10px;
 }
 
@@ -45,7 +48,9 @@ footer {
     flex-direction: column;
     justify-content: left;
     background-color: rgb(68, 68, 68);
-    padding: 20px 20px;
+    padding-top: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
     position: fixed;
     bottom: 0;
 }
@@ -60,7 +65,8 @@ footer {
 main {
     background-color: rgb(30, 40, 72);
     color: white;
-    padding: 20px 20px;
+    padding-top: 20px;
+    padding-left: 20px;
     min-height: 100%;
     flex: auto;
 }
@@ -117,7 +123,7 @@ main {
     font-size: 16px;
     cursor: pointer;
     text-decoration: none;
-    color:#3972C3
+    color:#3972C3;
 }
 
 .header-link:hover {
@@ -134,4 +140,18 @@ main {
     100% {
         color: white;
     }
+}
+
+.player-search-box {
+    background-color: rgb(120, 120, 120);
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    align-items: left;
+    border-radius: 5px;
+    margin-top: 20px;
+    margin-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    max-width: 90%;
 }
