--- a/css/track-styles.css
+++ b/css/track-styles.css
@@ -2,6 +2,7 @@
 #scoring-area {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     flex: auto;
@@ -10,7 +11,8 @@
 .score-button {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+
+    justify-content: space-around;
     align-items: center;
     padding: 20px 20px;
     margin: 20px 20px;
@@ -18,10 +20,10 @@
     border-style: none;
     min-width: 150px;
     /* max-width: 300px; */
-    min-height: 150px;
-    
+    min-height: 100px;
     background-color:rgb(9, 9, 9);
     color: white;
+    font-weight: bold;
 }
 
 .score-button.setting {
@@ -30,5 +32,4 @@
 
 .score {
     font-size: xxx-large;
-    font-weight: bold;
 } 
