--- a/my-react/src/App.css
+++ b/my-react/src/App.css
@@ -41,3 +41,21 @@
   padding: 0px 8px;
   padding-bottom: 8px;
 }
+
+
+.auth-box {
+  background-color: rgb(216, 216, 216);
+  border-radius: 5px;
+    margin: 20px 20px 20px;
+    padding: 20px 20px;
+    width: max-content;
+    display: flex;
+    flex-direction: column;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
