--- a/my-react/src/App.css
+++ b/my-react/src/App.css
@@ -59,3 +59,25 @@
   gap: 8px;
 }
 
+.page-info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.two-part-page {
+  display: flex;
+  gap: 8px;
+}
+
+.player-search-box {
+  background-color: rgb(216, 216, 216);
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  border-radius: 5px;
+  padding: 8px 8px;
+  margin: 8px 8px;
+  width: fit-content;
+}
+
