Finished setup page and navigation to tracking page

--- a/my-react/src/headerStyles.css
+++ b/my-react/src/headerStyles.css
@@ -19,9 +19,14 @@ svg {
     stroke: rgb(26, 106, 255);
 }
 
-
-
 nav {
     display: flex;
     gap: 8px;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    
 }
