--- a/react_deliverable/App.css
+++ b/react_deliverable/App.css
@@ -81,8 +81,20 @@
   width: fit-content;
 }
 
-component {
+.component {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  align-items: center;
+  justify-content: center;
+  text-align: left;
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+.weather {
+  padding: 8px 8px;
+  margin: 0;
+  background-color: #c5c5c5;
+  border-radius: 4px;
 }
